# Clipboard_Manager

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  preview.py  pyproject.toml
core/: autostart.py  categorizer.py  daemon.py  hotkey.py  tray.py
db/: connection.py  history_repo.py  snippet_repo.py
export/: exporter.py
tests/: conftest.py  test_autostart.py  test_categorizer.py  test_config.py  test_daemon.py  test_exporter.py  test_history_repo.py  test_hotkey.py  test_snippet_repo.py
ui/: app.py  history_tab.py  snippets_tab.py
