[project]
name = "clipboard-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "pynput>=1.7.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
clipboard-manager = "main:iniciar"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
